fix: improve text visibility and update app

--- a/codecanyon-product-description.html
+++ b/codecanyon-product-description.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Visa Processing Travel Agency - CodeCanyon Product Description</title>
+    <title>VisaPilot - Visa & Travel Agency / Student Consultancy - CodeCanyon Product Description</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -66,9 +66,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>Visa Processing Travel Agency - Complete Management Solution</h1>
+        <h1>VisaPilot - Visa & Travel Agency / Student Consultancy - Complete Management Solution</h1>
 
-        <p>Transform your travel agency with our comprehensive, AI-powered Visa Processing Travel Agency software. Built with cutting-edge technologies including Next.js 15, React 19, TypeScript, and MongoDB, this platform provides everything you need to efficiently manage clients, visa applications, appointments, billing, and document management.</p>
+        <p>Transform your visa and travel agency with our comprehensive, AI-powered VisaPilot - Visa & Travel Agency / Student Consultancy software. Built with cutting-edge technologies including Next.js 15, React 19, TypeScript, and MongoDB, this platform provides everything you need to efficiently manage clients, visa applications, appointments, billing, and document management.</p>
 
         <h2>Key Features</h2>
         <ul>
