--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Visa Processing Travel Agency - Documentation Hub</title>
+    <title>VisaPilot - Visa & Travel Agency / Student Consultancy - Documentation Hub</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -23,9 +23,9 @@
     <!-- Header -->
     <header class="gradient-bg text-white py-16">
         <div class="container mx-auto px-4 text-center">
-            <h1 class="text-4xl md:text-5xl font-bold mb-4">Visa Processing Travel Agency</h1>
+            <h1 class="text-4xl md:text-5xl font-bold mb-4">VisaPilot - Visa & Travel Agency / Student Consultancy</h1>
             <p class="text-xl md:text-2xl mb-8 opacity-90">Documentation Hub</p>
-            <p class="max-w-2xl mx-auto opacity-80">Welcome to the comprehensive documentation for the Visa Processing Travel Agency system. Below you'll find all the documentation resources for installation, usage, and support.</p>
+            <p class="max-w-2xl mx-auto opacity-80">Welcome to the comprehensive documentation for the VisaPilot - Visa & Travel Agency / Student Consultancy system. Below you'll find all the documentation resources for installation, usage, and support.</p>
         </div>
     </header>
 
@@ -78,7 +78,7 @@
                     <i class="fas fa-external-link-alt"></i>
                 </div>
                 <h3 class="text-xl font-bold mb-2 text-gray-800">Application</h3>
-                <p class="text-gray-600 mb-4">Access the Visa Processing Travel Agency application directly</p>
+                <p class="text-gray-600 mb-4">Access the VisaPilot - Visa & Travel Agency / Student Consultancy application directly</p>
                 <span class="inline-block bg-red-100 text-red-800 text-sm px-3 py-1 rounded-full">Launch</span>
             </a>
 
@@ -124,7 +124,7 @@
     <!-- Footer -->
     <footer class="bg-gray-800 text-white py-8 mt-12">
         <div class="container mx-auto px-4 text-center">
-            <p>&copy; 2025 Visa Processing Travel Agency. All rights reserved.</p>
+            <p>&copy; 2025 VisaPilot - Visa & Travel Agency / Student Consultancy. All rights reserved.</p>
             <p class="mt-2 text-gray-400">For support, contact: support@visaagency.com</p>
         </div>
     </footer>
