chore: update docs and sidebar

--- a/codecanyon-product-description.html
+++ b/codecanyon-product-description.html
@@ -86,6 +86,40 @@
             <li><strong>Compliance & Security</strong>: GDPR compliance tools and advanced security measures.</li>
         </ul>
 
+        <h2>System Tabs & Guides</h2>
+        <p>All core modules are organized into clear tabs and guides:</p>
+        <ul>
+            <li>Overview</li>
+            <li>Installation</li>
+            <li>Prerequisites</li>
+            <li>Quick Installation</li>
+            <li>Environment Setup</li>
+            <li>MongoDB Setup</li>
+            <li>User Documentation</li>
+            <li>Clients Guide</li>
+            <li>Visa Cases Guide</li>
+            <li>Appointments Guide</li>
+            <li>Billing Guide</li>
+            <li>Documents Guide</li>
+            <li>Accounting & Finance Guide</li>
+            <li>CRM & Lead Management Guide</li>
+            <li>Compliance & Security Guide</li>
+            <li>Workflow & Tracking Guide</li>
+            <li>Case Control Guide</li>
+            <li>Export & Import Guide</li>
+            <li>Activity Guide</li>
+            <li>Forms Guide</li>
+            <li>Knowledge & Help System Guide</li>
+            <li>Reports Guide</li>
+            <li>Settings Guide</li>
+            <li>Notifications Guide</li>
+            <li>Profile Guide</li>
+            <li>Smart Case Intelligence Guide</li>
+            <li>Verification & Compliance Guide</li>
+            <li>Troubleshooting</li>
+            <li>Support</li>
+        </ul>
+
         <h2>Technology Stack</h2>
         <ul>
             <li><strong>Frontend</strong>: Next.js 15.5.9, React 19.2.3, TypeScript 5.3.3</li>
