--- a/documentation.html
+++ b/documentation.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Visa Agency System - Complete Documentation</title>
+    <title>VisaPilot - Visa & Travel Agency / Student Consultancy - Operations & CRM Platform</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script>
@@ -70,7 +70,7 @@
         <div class="p-6">
             <h1 class="text-2xl font-bold mb-8 flex items-center">
                 <i class="fas fa-passport mr-3 text-purple-300"></i>
-                Visa Agency System
+                VisaPilot - Visa & Travel Agency / Student Consultancy - Operations & CRM Platform
             </h1>
             <ul class="space-y-2">
                 <li><a href="#overview" class="block px-4 py-2 rounded hover:bg-indigo-800 transition flex items-center"><i class="fas fa-info-circle mr-3 w-5"></i>Overview</a></li>
@@ -113,7 +113,7 @@
             <div class="max-w-4xl mx-auto">
                 <h1 class="text-4xl font-bold mb-4 flex items-center">
                     <i class="fas fa-passport mr-4 text-purple-200"></i>
-                    Visa Agency System - Comprehensive Visa Processing Platform
+                    VisaPilot - Visa & Travel Agency / Student Consultancy - Operations & CRM Platform - Comprehensive Visa Processing Platform
                 </h1>
                 <p class="text-xl text-indigo-100">Complete Visa Management Solution</p>
                 <p class="mt-4 text-indigo-200">Comprehensive User Documentation</p>
@@ -129,7 +129,7 @@
                         <h2 class="text-3xl font-bold text-gray-800">Overview</h2>
                     </div>
                     <p class="text-gray-600 text-lg leading-relaxed mb-6">
-                        <strong>Visa Agency System</strong> is a comprehensive visa processing platform designed
+                        <strong>VisaPilot - Visa & Travel Agency / Student Consultancy - Operations & CRM Platform</strong> is a comprehensive visa processing platform designed
                         for travel agencies, immigration consultants, and visa processing centers. Built with
                         cutting-edge technologies including Next.js 15.5.9, React 19.2.3, TypeScript 5.3.3, and MongoDB 8.20.3.
                     </p>
@@ -334,7 +334,7 @@ openssl rand -base64 32<br><br>
                         <i class="fas fa-book text-4xl text-primary-600"></i>
                         <h2 class="text-3xl font-bold text-gray-800">User Documentation</h2>
                     </div>
-                    <p class="text-gray-600 text-lg mb-8">Complete guides for all user roles in Visa Agency System</p>
+                    <p class="text-gray-600 text-lg mb-8">Complete guides for all user roles in VisaPilot - Visa & Travel Agency / Student Consultancy - Operations & CRM Platform</p>
                 </section>
 
                 <!-- Clients Guide -->
@@ -2358,11 +2358,11 @@ lsof -ti:3000 | xargs kill -9
                     <div class="text-center">
                         <div class="flex items-center justify-center space-x-3 mb-4">
                             <i class="fas fa-passport text-3xl"></i>
-                            <h3 class="text-2xl font-bold">Visa Agency System</h3>
+                            <h3 class="text-2xl font-bold">VisaPilot - Visa & Travel Agency / Student Consultancy - Operations & CRM Platform</h3>
                         </div>
                         <p class="text-gray-300 mb-4">Comprehensive Visa Management Platform</p>
                         <div class="flex justify-center space-x-6 text-sm">
-                            <span>© 2025 Visa Agency System</span>
+                            <span>© 2025 VisaPilot - Visa & Travel Agency / Student Consultancy - Operations & CRM Platform</span>
                             <span>•</span>
                             <span>MIT License</span>
                             <span>•</span>
